--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,27 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.floating-icon {
+  position: absolute;
+  opacity: 0.35;
+  animation: moveAround linear infinite;
+  pointer-events: none;
+}
+
+@keyframes moveAround {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  25% {
+    transform: translate(60px, -40px) rotate(20deg);
+  }
+  50% {
+    transform: translate(-50px, 60px) rotate(-20deg);
+  }
+  75% {
+    transform: translate(40px, 40px) rotate(10deg);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+}
